--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 Hello World
+
+<form id="form1" name="form1" method="post" action="">
+  Test
+  <input type="submit" name="button" id="button" value="Submit" />
+</form>
