--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 Hello World
 
 <form id="form1" name="form1" method="post" action="">
-  Test
-  <input type="submit" name="button" id="button" value="Submit" />
+  <p>Test:  
+    <label for="textfield"></label>
+    <input type="text" name="textfield" id="textfield" />
+  </p>
+  <p>Test2: 
+    <label for="textfield2"></label>
+    <input type="text" name="textfield2" id="textfield2" />
+  </p>
+  <p>
+    <input type="submit" name="button" id="button" value="Submit" />
+  </p>
 </form>
