--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 Hello World
 
-<form id="form1" name="form1" method="post" action="./main.html">
+<form id="form1" name="form1" action="./main.html">
   <p>Test:  
     <label for="textfield"></label>
     <input type="text" name="textfield" id="textfield" />
